--- a/ScryingOrb/ScryingOrb.csproj
+++ b/ScryingOrb/ScryingOrb.csproj
@@ -7,6 +7,7 @@
 		<LangVersion>8.0</LangVersion>
 		<TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
 		<OutputType>Library</OutputType>
+		<EnableHarmony>true</EnableHarmony>
 		<Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
 		<Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
 		<ProjectGuid>{6B2D3929-4EFB-46AC-88C1-D0FAEED7AAC0}</ProjectGuid>
@@ -44,6 +45,7 @@
 		<Compile Include="src\MailEditor.cs" />
 		<Compile Include="src\ModConfig.cs" />
 		<Compile Include="src\ModEntry.cs" />
+		<Compile Include="src\SpriteTextPatches.cs" />
 		<Compile Include="src\Experiences\FallbackExperience.cs" />
 		<Compile Include="src\Experiences\GarbageExperience.cs" />
 		<Compile Include="src\Experiences\GeodesExperience.cs" />
