--- a/ScryingOrb/ScryingOrb.csproj
+++ b/ScryingOrb/ScryingOrb.csproj
@@ -64,6 +64,7 @@
 		<None Include="assets\illumination.png" />
 		<None Include="i18n\default.json" />
 		<None Include="i18n\fr.json" />
+		<None Include="i18n\pt.json" />
 		<None Include="i18n\ru.json" />
 		<None Include="i18n\zh.json" />
 		<None Include="[JA]ScryingOrb\manifest.json">
